--- a/articulate/templates/serviceaccount.yaml
+++ b/articulate/templates/serviceaccount.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "pks-demo.serviceAccountName" . }}
+  name: {{ include "articulate.serviceAccountName" . }}
   labels:
-{{ include "pks-demo.labels" . | nindent 4 }}
+{{ include "articulate.labels" . | nindent 4 }}
 {{- end -}}
