--- a/articulate/Chart.yaml
+++ b/articulate/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: pks-demo
+name: articulate
 description: A Helm chart for Kubernetes
 
 # A chart can be either an 'application' or a 'library' chart.
