--- a/articulate/templates/service.yaml
+++ b/articulate/templates/service.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "pks-demo.fullname" . }}
+  name: {{ include "articulate.fullname" . }}
   labels:
-    {{- include "pks-demo.labels" . | nindent 4 }}
+    {{- include "articulate.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
@@ -12,4 +12,4 @@ spec:
       protocol: TCP
       name: http
   selector:
-    {{- include "pks-demo.selectorLabels" . | nindent 4 }}
+    {{- include "articulate.selectorLabels" . | nindent 4 }}
