--- a/articulate/templates/tests/test-connection.yaml
+++ b/articulate/templates/tests/test-connection.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: "{{ include "pks-demo.fullname" . }}-test-connection"
+  name: "{{ include "articulate.fullname" . }}-test-connection"
   labels:
-{{ include "pks-demo.labels" . | nindent 4 }}
+{{ include "articulate.labels" . | nindent 4 }}
   annotations:
     "helm.sh/hook": test-success
 spec:
@@ -11,5 +11,5 @@ spec:
     - name: wget
       image: busybox
       command: ['wget']
-      args:  ['{{ include "pks-demo.fullname" . }}:{{ .Values.service.port }}']
+      args:  ['{{ include "articulate.fullname" . }}:{{ .Values.service.port }}']
   restartPolicy: Never
