--- a/articulate/values.yaml
+++ b/articulate/values.yaml
@@ -1,4 +1,4 @@
-# Default values for pks-demo.
+# Default values for articulate.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
