Updated Helm Chart

--- a/articulate/templates/deployment.yaml
+++ b/articulate/templates/deployment.yaml
@@ -25,7 +25,7 @@ spec:
         - name: {{ .Chart.Name }}
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
-          image: "{{ .Values.image.repository }}:{{ .Values.appVersion }}"
+          image: "{{ .Values.image.repository }}:{{ .Values.articulateVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
             - name: http
