--- a/articulate/templates/deployment.yaml
+++ b/articulate/templates/deployment.yaml
@@ -29,7 +29,7 @@ spec:
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           env:
           - name: APP_VERSION
-            value: {{ .Values.articulateVersion }}
+            value: articulate-{{ .Values.articulateVersion }}
           ports:
             - name: http
               containerPort: 8080
