--- a/articulate/templates/deployment-blue.yaml
+++ b/articulate/templates/deployment-blue.yaml
@@ -32,6 +32,8 @@ spec:
           env:
             - name: ENVIRONMENT
               value: "Blue Environment"
+            - name: APP_VERSION
+              value: articulate-{{ .Values.blue.articulateVersion }}
           ports:
             - name: http
               containerPort: 8080
